Memory leak in CompilerOracle::parse_from_line

XMLWordPrintable

    • b15

        Direct leak of 56 byte(s) in 1 object(s) allocated from:
            #0 0x7f312f8b89cf in __interceptor_malloc ../../../../src/libsanitizer/asan/asan_malloc_linux.cpp:69
            #1 0x7f312beaefbf in os::malloc(unsigned long, MEMFLAGS, NativeCallStack const&) src/hotspot/share/runtime/os.cpp:654
            #2 0x7f3129a1dd17 in AllocateHeap(unsigned long, MEMFLAGS, NativeCallStack const&, AllocFailStrategy::AllocFailEnum) src/hotspot/share/memory/allocation.cpp:42
            #3 0x7f3129a1dd17 in AllocateHeap(unsigned long, MEMFLAGS, AllocFailStrategy::AllocFailEnum) src/hotspot/share/memory/allocation.cpp:52
            #4 0x7f312a467c9e in CHeapObjBase::operator new(unsigned long, MEMFLAGS) src/hotspot/share/memory/allocation.hpp:183
            #5 0x7f312a467c9e in CHeapObj<(MEMFLAGS)7>::operator new(unsigned long) src/hotspot/share/memory/allocation.hpp:237
            #6 0x7f312a467c9e in TypedMethodOptionMatcher::clone() src/hotspot/share/compiler/compilerOracle.cpp:246
            #7 0x7f312a46a95e in CompilerOracle::parse_from_line(char*) src/hotspot/share/compiler/compilerOracle.cpp:867
            #8 0x7f312a46dec1 in CompilerOracle::parse_from_string(char const*, void (*)(char*)) src/hotspot/share/compiler/compilerOracle.cpp:989
            #9 0x7f312a46dec1 in compilerOracle_init() src/hotspot/share/compiler/compilerOracle.cpp:993
            #10 0x7f312ae59bd8 in init_globals() src/hotspot/share/runtime/init.cpp:156
            #11 0x7f312c89b1b7 in Threads::create_vm(JavaVMInitArgs*, bool*) src/hotspot/share/runtime/threads.cpp:568
            #12 0x7f312b24c353 in JNI_CreateJavaVM_inner src/hotspot/share/prims/jni.cpp:3588
            #13 0x7f312b24c353 in JNI_CreateJavaVM src/hotspot/share/prims/jni.cpp:3674
            #14 0x7f312f7bfe25 in InitializeJVM src/java.base/share/native/libjli/java.c:1459
            #15 0x7f312f7bfe25 in JavaMain src/java.base/share/native/libjli/java.c:413
            #16 0x7f312f7c8708 in ThreadJavaMain src/java.base/unix/native/libjli/java_md.c:650
            #17 0x7f312f65afd3 in start_thread nptl/pthread_create.c:442

              Assignee:
              Damon Fenacci
              Reporter:
              Justin King
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: