8303069: Memory leak in CompilerOracle::parse_from_line

Backport-of: 384a8b85a7266b920242ea73baf578577ca588ec